--- a/market-core/pom.xml
+++ b/market-core/pom.xml
@@ -50,6 +50,10 @@
             <artifactId>liquibase-core</artifactId>
             <version>4.31.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis-reactive</artifactId>
+        </dependency>
 
         <!-- Testing -->
         <dependency>
