--- a/payment/Dockerfile
+++ b/payment/Dockerfile
@@ -1,5 +1,5 @@
-# Используем официальный базовый образ OpenJDK 21 (lite версия)
-FROM openjdk:21-jdk-slim
+# Используем официальный базовый образ JDK 21
+FROM eclipse-temurin:21-jdk
 
 # Устанавливаем рабочую директорию внутри контейнера
 WORKDIR /app
